# MSPRust

./: Cargo.toml  build.rs
src/: amf.rs  amfdeserializer.rs  amfnew.rs  amfserializer.rs  amfstuff.rs  build.rs  checksum.rs  httpwindows.rs  main.rs  msp.rs  nebula.rs  ticket.rs
src/cpp/: dllmain.cpp
src/msp/: checksumcalculator.rs  client.rs  mod.rs  presence.rs  ticketgenerator.rs
