[package]
name = "MSP"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.1.0"
md5 = "0.1.0"
hex = "0.4"
[build-dependencies]
cc = "1.0.46"

[profile.release]
strip = "debuginfo"
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"

